# MAI-first-course

./: .gitignore
course1/Discreetka/cw1-7/: report-at-cw1-7.tex
course1/Discreetka/cw8/: main.py
course1/zaika/15/src/: main.c
course1/zaika/23/include/: BinarySearchTree.hpp  TreeNode.hpp
course1/zaika/23/src/: main.cpp
course1/zaika/24/: CMakeLists.txt
course1/zaika/24/include/: ExpressionNode.hpp
course1/zaika/26/include/: Queue.hpp
course1/zaika/26/src/: main.cpp
course1/zaika/7/src/: us-no-you.txt
course1/zaika/course-works/IX/: CMakeLists.txt
course1/zaika/course-works/VI/: CMakeLists.txt
course1/zaika/course-works/VI/include/: Computer.hpp  data.txt
course1/zaika/course-works/VI/src/: Computer.cpp  create_inventory.cpp  main.cpp
course1/zaika/course-works/VIII/: CMakeLists.txt
semester2/21/: lab21.sh
semester2/21/src/: main.sh
semester2/23/: CMakeLists.txt  TreeNode.h
semester2/23/include/: BinarySearchTree.h  BinarySearchTree.hpp
semester2/23/src/: CMakeLists.txt  main.cpp
semester2/24/src/: main.cpp
semester2/Discreetka/cw8/: main.py
semester2/cw8/: main.py
semester2/zaika/23/src/: main.cpp
semester2/zaika/24/include/: ExpressionNode.hpp  ExpressionTree.hpp
semester2/zaika/24/src/: main.cpp
zaika/course-works/cw-6(VI)/include/: Computer.hpp
zaika/course-works/cw-8(VIII)/src/: List.cpp
zaika/course-works/cw-9(IX)/src/: SortSearch.cpp
zaika/labs/MT/src/: Bugatti-Turing.txt  mtD.jdtp
zaika/labs/lab-14/src/: main.c
zaika/labs/lab-23/include/: BinarySearchTree.hpp
zaika/labs/lab-23/src/: main.cpp
(+7 files in other folders)
